# hermes-flight-recorder

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  HERMES_CONTRIBUTION.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TRAINING_PIPELINE.md  demo.sh  pyproject.toml  release_check.sh  scenario.schema.json
.github/: pull_request_template.md
docs/: agentic-finetune-24-7-goals.md  agentic-finetune-autonomous-goals.md  agentic-finetune-autonomous-operations.md  agentic-finetune-eval-layer.md  agentic-finetune-governance.md  agentic-finetune-infra-components.md  agentic-finetune-training-layer.md  agentic-training-huggingface.md  local-agentic-training.md  model-layer-registry.md  runtime-adapter-routing.md  serving-demo.md  tau3-training-readiness.md
eval_suites/: red_team_prompt_injection.json  red_team_safety_regressions.json
examples/: action_ledger_gate_policy.demo.json  compare_gate_policy.demo.json  improvement_ledger_gate_policy.demo.json  promotion_ledger_gate_policy.demo.json  promotion_policy.demo.json  reviewed_gate_policy.demo.json  suite_gate_policy.demo.json  training_gate_policy.demo.json
fixtures/: budget_runaway_bad.observer.jsonl  coven_daemon_events_good.coven.jsonl  coven_detached_good.coven.jsonl  cron_async_delegation_bad.observer.jsonl  email_reply_completion_bad.observer.jsonl  email_reply_completion_good.observer.jsonl  openclaw_support_ticket_good.openclaw.jsonl  prompt_injection_bad.trajectory.jsonl  prompt_injection_good.trajectory.jsonl
flightrecorder/: __init__.py  action_gate.py  action_ledger.py  adapters.py  artifacts.py  (+100 more)
(+1469 files in other folders)
