[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-flight-recorder"
version = "0.2.0"
description = "Adversarial eval harness and static flight-recorder reports for Hermes Agent runs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hermes Flight Recorder Contributors" }]
keywords = ["hermes", "agents", "evals", "observability", "security"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6,<7"]

[project.scripts]
flightrecorder = "flightrecorder.cli:main"
hermes-flight-recorder = "flightrecorder.cli:main"

[tool.setuptools.packages.find]
include = ["flightrecorder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
